--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>HERE ARE LINKS TO MY FAVORITE ANIMALS</h1>
-<p>DOG</p>
-<p>CAT</p>
+<a src="cat.html">DOG</a>
+<a src="cat.html">CAT</a>
 </body>
 </html>
