--- a/dog.html
+++ b/dog.html
@@ -6,6 +6,6 @@
 <body>
 <h1>My Favorite Dog</h1>
 <p>My Favorite dog is a husky</p>
-  <img src="/Resources/Mobile (1).jpg" width=200px height=auto
+  <img src="Resources/Mobile (1).jpg" width=200px height=auto
 </body>
 </html>
