--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>HERE ARE LINKS TO MY FAVORITE ANIMALS</h1>
-<a href="Pages/cat.html">DOG</a>
-<a href="Pages/dog.html">CAT</a>
+<a href="Pages/cat.html">CAT</a>
+<a href="Pages/dog.html">DOG</a>
 </body>
 </html>
