--- a/Pages/cat.html
+++ b/Pages/cat.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>FAVORITE CAT</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>My Favorite Cat</h1>
