--- a/Pages/cat.html
+++ b/Pages/cat.html
@@ -7,6 +7,6 @@
 <body>
 <h1>My Favorite Cat</h1>
 <p>My Favorite cat is a Scottish Fold</p>
-  <img src="\Demo\Resources\scottish_fold2.jpg" width=200px height=auto>
+  <img src="\Demo\Resources\scottish_fold2 (1).jpg" width=200px height=auto>
 </body>
 </html>
