--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <h1>HERE ARE LINKS TO MY FAVORITE ANIMALS</h1>
 <a href="Pages\cat.html">CAT</a>
 <a href="Pages\dog.html">DOG</a>
+<p>These are some changes I want to push to Github</p>
+<p>Yay...more code</p>
 </body>
 </html>
