--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
 <title>FAVORITE ANIMALS</title>
@@ -7,9 +7,14 @@
 </head>
 <body>
 <h1>HERE ARE LINKS TO MY FAVORITE ANIMALS</h1>
-<a href="Pages\cat.html">CAT</a>
-<a href="Pages\dog.html">DOG</a>
-<p>These are some changes I want to push to Github</p>
-<p>Yay...more code</p>
+<ul>
+  <li>
+      <a href="Pages\cat.html">CAT</a>
+    <li>
+      
+    </li>
+    <a href="Pages\dog.html">DOG</a>
+  </li>
+</ul>
 </body>
 </html>
