--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>HERE ARE LINKS TO MY FAVORITE ANIMALS</h1>
 <ul>
   <li>
-      <a href="Pages\cat.html">CAT hkjhkjhkjh</a>
+      <a href="Pages\cat.html">CAT</a>
     <li>
 
     </li>
